--- a/README.html
+++ b/README.html
@@ -45,17 +45,18 @@ Room 1.20, Malet Place Engineering Building, University College London (London, 
 <p>Contact: <a href="mailto:rocco.dantuono@crick.ac.uk">rocco.dantuono@crick.ac.uk</a>
 please use the following subject: Train the Trainers 2025 - DAIM-Crick Partnership</p>
 <p>Programme in short:</p>
-<p>13th June 2025
-09:30 - 10:00 - Registration
-10:00 - 10:30 - Welcome and self-introduction<br>10:30 - 12:00 - Technical session and tool showcase
-12:00 - 13:00 - Lunch
-13:00 - 14:00 - How to organise bioimage analysis workshops
-14:00 - 15:00 - Right teaching settings - Pedagogy of training (with Higher Education specialist)
-15:00 - 15:30 - Call for help - Selected challenges in BIA training, proposed by participants
-15:30 - 16:00 - Coffee break
-16:00 - 17:00 - Panel discussion on BIA solutions and strategies for future training courses
-17:00 - 17:30 - Wrap up
-18:00 -  Drink and nibbles reception</p>
+<p>13th June 2025</p>
+<p>09:30 - 10:00 - Registration</p>
+<p>10:00 - 10:30 - Welcome and self-introduction  </p>
+<p>10:30 - 12:00 - Technical session and tool showcase</p>
+<p>12:00 - 13:00 - Lunch</p>
+<p>13:00 - 14:00 - How to organise bioimage analysis workshops</p>
+<p>14:00 - 15:00 - Right teaching settings - Pedagogy of training (with Higher Education specialist)</p>
+<p>15:00 - 15:30 - Call for help - Selected challenges in BIA training, proposed by participants</p>
+<p>15:30 - 16:00 - Coffee break</p>
+<p>16:00 - 17:00 - Panel discussion on BIA solutions and strategies for future training courses</p>
+<p>17:00 - 17:30 - Wrap up</p>
+<p>18:00 -  Drink and nibbles reception</p>
 <p>Organisers:
 <a href="https://github.com/RoccoDAnt">Rocco D&#x2019;Antuono</a> (the Francis Crick Institute), <a href="https://github.com/martlj">Martin Jones</a> (the Francis Crick Institute),
 <a href="https://github.com/stemarcotti">Stefania Marcotti</a> (King&#x2019;s College London), <a href="https://github.com/djpbarry">David Barry</a> (The Francis Crick Institute), <a href="https://profiles.imperial.ac.uk/d.gaboriau">David Gaboriau</a> (Imperial College London), <a href="https://github.com/giuliapaci">Giulia Paci</a> (University College London), <a href="https://github.com/DaleMoulding">Dale Moulding</a> (University College London)</p>
